--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
                <div class="col-sm-8">
                    <h1>About</h1>
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores soluta doloribus facere explicabo iste ratione quae nihil, et cumque dolorum impedit atque, exercitationem aliquam ipsum sapiente, debitis enim facilis saepe!</p>
-               </div>
+                   <a href="#">Exlore Services</a>
+                </div>
+               
            </div>
 
        </div>
