changed about page

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 
                </div>
                <div class="col-sm-8">
-                   <h1>About</h1>
+                   <h1>ABOUT</h1>
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores soluta doloribus facere explicabo iste ratione quae nihil, et cumque dolorum impedit atque, exercitationem aliquam ipsum sapiente, debitis enim facilis saepe!</p>
-                   <a href="#">Exlore Services</a>
+                   <a href="#">Explore Services</a>
                 </div>
                
            </div>
