--- a/login.html
+++ b/login.html
@@ -55,6 +55,11 @@
               <button>Login</button>
             </div>
           </div>
+          <div class="forgotpassword">
+            
+              <p>Forgot password?</p>
+
+          </div>
          </div>
          <div class="col-sm-3">
             
